--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body {
@@ -207,6 +208,7 @@ td {
     width: 10vw;
 }
 
+
 button {
 
 
@@ -239,22 +241,29 @@ button:active {
     justify-content: space-evenly;
 }
 #result-content{
-    position: relative;
-font-size: 2rem;
-font-weight: 900;
-font-style: italic;
-height: 100px;
-width: 100px;
+  position: absolute;
+  top: 0;
+  left: 5%;
+  height: 90vh;
+  width: 90vw;
+  border: 5px solid red;
+  z-index: 5;
+margin: 50px auto;
 
 }
 span{
+
     position: absolute;
-    top: 0;
-    left: 0;
-   align-items: center;
-    display: none;
-    
+   font-size: 2rem;
+   font-style: italic;
+   font-weight: 900;
+display: none;
+padding-left: 45%;
+padding-top: 21%;
+
+ 
 }
+
 
 @media(max-width:414px){
     #front{
