--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+  
 }
 
 body {
@@ -12,19 +12,19 @@ body {
 #bg-image {
 
     height: 100vh;
-    position: relative;
+   
 }
 
 
 
 #bg-image div {
 
-    border: 2px solid red;
+  
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     opacity: 0;
     transition: opacity 2s linear;
     z-index: 1;
@@ -32,7 +32,7 @@ body {
 
 #bg-image div:nth-child(1) {
     background: #000000;
-    display: block;
+   
 
 }
 
@@ -150,28 +150,14 @@ body {
     background-image: linear-gradient(to bottom, #00000c 80%, #150800 100%);
 
 }
-
-/* #front {
-
-   
-   
-    opacity: 1;
-    
-    z-index: 10;
-    display: block;
-    position: fixed;
-   background-color: white;
-} */
 #front {
     z-index: 10;
     position: absolute;
     top: 0;
-    left: 5%;
-    /* background-color: white; */
-    border: 5px solid greenyellow;
-    height: 90vh;
+    left: 5vw;
+   height: 90vh;
     width: 90vw;
-    margin: 50px auto;
+    margin: 5vh auto;
 
 
 }
@@ -184,9 +170,9 @@ body {
 table,
 th,
 td {
-    border: 4px solid black;
-    width: 40%;
-    height: 18%;
+    border: 0.5vh solid black;
+    width: 40vw;
+    height: 3vh;
     text-align: center;
     border-collapse: collapse;
 
@@ -212,7 +198,7 @@ td {
 button {
 
 
-    font-size: 24px;
+    font-size: 2vw;
     cursor: pointer;
     text-align: center;
 
@@ -220,8 +206,8 @@ button {
 
 color: inherit;
     background-color: #4CAF50;
-    border-radius: 15px;
-    box-shadow: 0 9px #999;
+    border-radius: 2.5vw;
+    box-shadow: 0 0.8vh #999;
     height: 5vh;
     width: 10vw;
 }
@@ -232,8 +218,8 @@ button:hover {
 
 button:active {
     background-color: #3e8e41;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
+    box-shadow: 0 0.1vh #666;
+    transform: translateY(0.95vh);
 }
 
 .button {
@@ -243,38 +229,33 @@ button:active {
 #result-content{
   position: absolute;
   top: 0;
-  left: 5%;
+  left: 5vw;
   height: 90vh;
   width: 90vw;
-  border: 5px solid red;
+ 
   z-index: 5;
-margin: 50px auto;
+margin: 5vh auto;
 
 }
 span{
 
     position: absolute;
-   font-size: 2rem;
+   font-size: 3vw;
    font-style: italic;
    font-weight: 900;
 display: none;
-padding-left: 45%;
-padding-top: 21%;
+padding-left: 42vw;
+padding-top: 38vh;
 
  
 }
 
 
 @media(max-width:414px){
-    #front{
-        font-size: 60%;
-    }
-    button{
-        font-size: 15px;
-        color: inherit;
-    }
-  #result-content{
-    font-size: 20px;
-  }
-    
+  
+   #first{
+    font-size: 2vw;
+   }
+  
+  
 }
